--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,11 @@
 /* @import url("../vendor/fonts.css"); */
 
 .page {
+  min-width: 1100px;
+  max-width: 160px;
+  margin: auto;
+  font-family: "inter" Arial, sans-serif;
+  font-family: "Nato serif", "Times New Roman", serif;
+  font-size: 16px;
+  line-height: 20px;
 }
