project setup re-done

--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,7 @@
   min-width: 1100px;
   max-width: 160px;
   margin: auto;
-  font-family: "inter" Arial, sans-serif;
+  font-family: "inter", Arial, sans-serif;
   font-family: "Nato serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
