--- a/pages/index.css
+++ b/pages/index.css
@@ -2,10 +2,18 @@
 
 .page {
   min-width: 1100px;
-  max-width: 160px;
+  max-width: 1600px;
   margin: auto;
   font-family: "inter", Arial, sans-serif;
-  font-family: "Nato serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
 }
+
+.header {{
+
+}
+
+.content {
+
+}
+
