--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-/* @import url("../vendor/fonts.css"); */
+@import url("../vendor/fonts.css");
 
 .page {
   min-width: 1100px;
@@ -7,10 +7,142 @@
   font-family: "inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  color: #000000;
 }
 
 .header {
+  position: relative;
+  padding: 30px 80px 40px;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  background-image: url("../images/background_header.svg");
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  position: relative;
+  left: -50px;
+  width: 105px;
+  height: 39px;
+}
+
+.nav__links {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
+  list-style-type: none;
+}
+
+.nav__link {
+  color: #000;
+  text-decoration: none;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.header__title {
+  max-width: 729px;
+  margin: 183px 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+}
+
+.header__description {
+  max-width: 683px;
+  margin-top: 28px;
+  font-family: "Noto Serif", Times New Roman, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__span-accent {
+  display: block;
+  font-style: italic;
+  font-weight: normal;
+  font-family: "Noto Serif", Times New Roman, serif;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  max-width: 646px;
+  min-height: 568px;
+  z-index: 1;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+}
+
+.header__paragraph {
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
 }
 
 .content {
+}
+
+.recipes {
+  padding: 100px 80px 215px;
+  background-image: url("./images/background_recipes.svg");
+  background-color: #0a2750;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+}
+
+.recipes__title {
+  max-width: 580px;
+}
+
+.recipes__subtitle {
+  max-width: 438px;
+  padding-top: 24px;
+  font-family: "Noto Serif", Times New Roman, serif;
+}
+
+.recipes__videos {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  padding-bottom: 215px;
+}
+
+.recipes__iframe {
+  max-width: 480px;
+  min-height: 273px;
+  padding-bottom: 24px;
+}
+
+.recipes__video-caption {
+  display: flex;
+  justify-content: space-between;
 }
