--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #000000;
+  background-color: #ffffff;
 }
 
 .header {
@@ -24,6 +25,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  margin-top: 30px;
 }
 
 .nav__logo {
