--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,12 @@
 @import url("../vendor/fonts.css");
 
 .page {
+  width: 100%;
   min-width: 1100px;
   max-width: 1600px;
-  margin: auto;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0;
   font-family: "inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
