--- a/pages/index.css
+++ b/pages/index.css
@@ -149,3 +149,97 @@
   display: flex;
   justify-content: space-between;
 }
+
+.reservation {
+  padding: 100px 0 120px;
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  color: #000000;
+}
+
+.reservation__title {
+  padding: 0 0 80px;
+  text-align: center;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+.form {
+  max-width: 385px;
+}
+
+.form__fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.form__label {
+  margin-bottom: 32px;
+  display: block;
+  /*form are inline element
+  needed to conver
+  to block for margin
+  to work */
+}
+
+.form__label_name {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  padding: 0 0 0 12px;
+  box-sizing: border-box; /* or remove border */
+  margin-top: 8px;
+  border-radius: 4px;
+  height: 60px;
+}
+
+.form__input_name {
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+
+.form__button {
+  width: 100%;
+  padding: 0;
+  margin-bottom: 32px;
+  border-radius: 4px;
+  opacity: 1;
+  height: 60px;
+  background-color: #2f80ed;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+  transition: linear;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  background-color: #2f80ed;
+  background-image: url(../images/check.svg);
+  width: 20px;
+  height: 20px;
+}
