--- a/pages/index.css
+++ b/pages/index.css
@@ -165,6 +165,7 @@
   text-align: center;
   font-size: 44px;
   line-height: 52px;
+  font-weight: 500;
 }
 
 .reservation__form {
@@ -217,6 +218,7 @@
   font-size: 20px;
   line-height: 30px;
   color: #838383;
+  font-weight: 500;
 }
 
 .form__button {
