Final project done.

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,248 +1,9 @@
-.page {
-  width: 100%;
-  min-width: 1100px;
-  max-width: 1600px;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 0;
-  font-family: "inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-  background-color: #ffffff;
-}
-
-.header {
-  position: relative;
-  padding: 30px 80px 40px;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  background-image: url("../images/background_header.svg");
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  gap: 20px;
-  list-style-type: none;
-}
-
-.nav__link {
-  color: #000;
-  text-decoration: none;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header__title {
-  max-width: 729px;
-  margin: 183px 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__description {
-  max-width: 683px;
-  margin-top: 28px;
-  font-family: "Noto Serif", Times New Roman, serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__span-accent {
-  display: block;
-  font-style: italic;
-  font-weight: normal;
-  font-family: "Noto Serif", Times New Roman, serif;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  max-width: 646px;
-  min-height: 568px;
-  z-index: 1;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-}
-
-.header__paragraph {
-  margin: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.content {
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  background-image: url("./images/background_recipes.svg");
-  background-color: #0a2750;
-  background-repeat: no-repeat;
-  background-position: center;
-  color: #fff;
-}
-
-.recipes__title {
-  max-width: 580px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  padding-top: 24px;
-  font-family: "Noto Serif", Times New Roman, serif;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  padding-bottom: 215px;
-}
-
-.recipes__iframe {
-  max-width: 480px;
-  min-height: 273px;
-  padding-bottom: 24px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  color: #000000;
-}
-
-.reservation__title {
-  padding: 0 0 80px;
-  text-align: center;
-  font-size: 44px;
-  line-height: 52px;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  padding: 0;
-  margin: 0;
-  border: none;
-}
-
-.form__label {
-  margin-bottom: 32px;
-  display: block;
-  /*form are inline element
-  needed to conver
-  to block for margin
-  to work */
-}
-
-.form__label_name {
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  padding: 0 0 0 12px;
-  box-sizing: border-box; /* or remove border */
-  margin-top: 8px;
-  border-radius: 4px;
-  height: 60px;
-}
-
-.form__input_name {
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-  font-weight: 500;
-}
-
-.form__button {
-  width: 100%;
-  padding: 0;
-  margin-bottom: 32px;
-  border-radius: 4px;
-  opacity: 1;
-  height: 60px;
-  background-color: #2f80ed;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-  transition: linear;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  background-color: #2f80ed;
-  background-image: url(../images/check.svg);
-  width: 20px;
-  height: 20px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
