--- a/blocks/about.css
+++ b/blocks/about.css
@@ -11,8 +11,8 @@
   margin: 100px 0 0 80px;
   z-index: 1;
   color: white;
-  font-family: "Inter";
-  font-style: normal;
+  /* font-family: "Inter";
+  font-style: normal; */
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -21,22 +21,26 @@
 .about__content {
   padding: 0;
   max-width: 660px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  gap: 20px;
-
-  margin: 119px 80px 170px;
+  gap: 20px; */
+  margin: 119px 80px 173px;
   z-index: 1;
 }
 
 .about__paragraph {
-  margin: 0 0 32px;
+  margin: 0 0 20px;
+  padding: 0;
   font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
+  /* font-style: normal;
+  font-weight: normal; */
   font-style: 20px;
   line-height: 30px;
   color: white;
+}
+
+.about__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .about__circle {
