--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,11 +3,6 @@
   padding: 60px 80px 108px 80px;
   background-color: #0a2850;
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  font-family: "inter";
-  font-style: normal;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: normal;
 }
 
 .footer__content {
@@ -49,18 +44,25 @@
 
 .footer__social-heading {
   margin: 0 0 20px auto;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  margin-right: 0 10px 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__social-link {
   display: flex;
   column-gap: 10px;
   color: white;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 0 10px 0;
 }
 
 .footer__social-link:hover {
@@ -71,4 +73,7 @@
   color: white;
   margin: 108px 0 60px;
   padding: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
