--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,12 +1,16 @@
 .header {
-  position: relative;
+  margin: 0;
   padding: 30px 80px 40px;
+  position: relative;
   min-height: 720px;
   max-height: 800px;
   height: 100vh;
   background-image: url("../images/background_header.svg");
+  background-size: cover;
   display: flex;
   flex-direction: column;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .nav {
@@ -16,6 +20,8 @@
 }
 
 .nav__logo {
+  padding: 0;
+  margin: 0;
   position: relative;
   left: -50px;
   width: 105px;
@@ -23,21 +29,20 @@
 }
 
 .nav__links {
-  display: flex;
   padding: 0;
   margin: 0;
+  display: flex;
   gap: 20px;
   list-style-type: none;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .nav__link {
   color: #000;
   text-decoration: none;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
 }
 
 .nav__link:hover {
@@ -46,54 +51,52 @@
 
 .header__title {
   max-width: 729px;
-  margin: 183px 0;
+  margin: 183px 0 0;
+  padding: 0;
   font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
 }
 
-.header__description {
-  max-width: 683px;
-  margin-top: 28px;
-  font-family: "Noto Serif", Times New Roman, serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
 .header__span-accent {
   display: block;
+  max-width: 729px;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
-  font-weight: normal;
-  font-family: "Noto Serif", Times New Roman, serif;
   font-size: 60px;
   line-height: 72px;
   color: #2f80ed;
+}
+
+.header__description {
+  max-width: 683px;
+  margin: 28px auto auto 0;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .header__image {
   position: absolute;
   top: 124px;
   right: 5px;
-  max-width: 646px;
-  min-height: 568px;
+  width: 646px;
+  height: 568px;
   z-index: 1;
 }
 
 .header__footer {
   display: flex;
   justify-content: space-between;
-  margin-top: auto;
+  /* margin-top: auto; */
 }
 
 .header__paragraph {
-  margin: 0;
+  margin: auto 0 0;
+  padding: 0;
   font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
