--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,13 +1,18 @@
 .menu {
   padding: 100px 0 100px;
+  /* font-style: normal;
+  font-weight: normal; */
+  background-color: #fff;
+  background-image: url(../images/background_menu.svg);
+  background-position: center;
+  background-repeat: none;
 }
 
 .menu__title {
   text-align: center;
   max-width: 780px;
   margin: 0 auto 24px auto;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -17,9 +22,8 @@
   text-align: center;
   max-width: 780px;
   margin: 0 auto 100px auto;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
+
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -40,8 +44,7 @@
 
 .card__title {
   margin: 0 0 32px;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
   font-style: 20px;
   line-height: 30px;
@@ -55,9 +58,8 @@
 .card__list-item {
   margin: 0 0 16px;
   display: flex;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
+
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
 }
