--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -5,18 +5,27 @@
   background-repeat: no-repeat;
   background-position: center;
   color: #fff;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .recipes__title {
   max-width: 580px;
-  margin-bottom: 24px;
+  margin: 0 0 24px;
+  padding: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
 .recipes__subtitle {
   max-width: 438px;
-  padding-top: 24px;
+  padding: 0;
+  margin: 0 auto 80px 0;
   font-family: "Noto Serif", Times New Roman, serif;
-  margin-bottom: 80px;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .recipes__videos {
@@ -24,15 +33,22 @@
   gap: 40px;
   justify-content: center;
   padding-bottom: 215px;
+  margin: 0;
 }
 
 .recipes__iframe {
-  max-width: 480px;
-  min-height: 273px;
+  width: 480px;
+  height: 273px;
   padding-bottom: 24px;
 }
 
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
+  margin: 24px auto auto 0;
+  padding: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
 }
