--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  margin-bottom: 108px;
   padding: 60px 80px 108px 80px;
   background-color: #0a2850;
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
@@ -11,7 +10,7 @@
   color: white;
 }
 
-.footer logo {
+.footer__logo {
   margin: 0;
   padding: 0;
   width: 105px;
@@ -21,11 +20,6 @@
 .social-media {
   display: flex;
   flex-direction: column;
-}
-
-.footer__social-heading {
-  margin-bottom: 20px;
-  font-weight: bold;
 }
 
 .footer__list {
@@ -43,7 +37,7 @@
 }
 
 .footer__social-heading {
-  margin: 0 0 20px auto;
+  margin-bottom: 20px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
   font-size: 16px;
@@ -52,17 +46,19 @@
 
 .footer__social-link {
   display: flex;
+  align-items: center;
   column-gap: 10px;
   color: white;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  text-decoration: none;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 0 10px 0;
+  margin: 0 10px 0;
 }
 
 .footer__social-link:hover {
@@ -71,7 +67,6 @@
 
 .footer__copyright {
   color: white;
-  margin: 108px 0 60px;
   padding: 0;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
