--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   background-image: url(../images/background_menu.svg);
   background-position: center;
-  background-repeat: none;
+  background-repeat: no-repeat;
 }
 
 .menu__title {
@@ -38,7 +38,7 @@
   list-style-type: none;
 }
 
-.card {
+.menu__card {
   width: 540px;
 }
 
@@ -46,7 +46,7 @@
   margin: 0 0 32px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
-  font-style: 20px;
+  font-size: 20px;
   line-height: 30px;
 }
 
@@ -58,7 +58,6 @@
 .card__list-item {
   margin: 0 0 16px;
   display: flex;
-
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
