--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -32,14 +32,14 @@
   display: flex;
   gap: 40px;
   justify-content: center;
-  padding-bottom: 215px;
   margin: 0;
 }
 
 .recipes__iframe {
   width: 480px;
   height: 273px;
-  padding-bottom: 24px;
+  border: none;
+  display: block;
 }
 
 .recipes__video-caption {
