--- a/blocks/form.css
+++ b/blocks/form.css
@@ -31,21 +31,15 @@
 .form__input {
   display: block;
   width: 100%;
+  height: 60px;
   padding: 0 12px 0 12px;
   box-sizing: border-box;
   margin-top: 8px;
   border-radius: 4px;
-  height: 60px;
-  font-size: 20px;
-  line-height: 30px;
-  border: #838383;
-}
-
-.form__input_id_name {
   font-size: 20px;
   line-height: 30px;
   color: #838383;
-  font-weight: 500;
+  border: #838383 1px solid;
 }
 
 .form__button {
