--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,7 +6,7 @@
 }
 
 .footer__content {
-  padding: 60px 80px 108px;
+  padding: 60px 80px 108px 80px;
   display: flex;
   justify-content: space-between;
   color: white;
@@ -68,8 +68,8 @@
 
 .footer__copyright {
   color: white;
-  padding: 0;
-  margin-bottom: 60px;
+  margin: 0;
+  padding: 0 0 60px 80px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
